# rust-api

./: .env  Cargo.toml
migrations/: 20250601212945_init.up.sql
src/: main.rs  model.rs  schema.rs  services.rs
